# SK_6812_RGBW

./: Colors.py  GUI.py  LICENSE  README.md  StopThread.py  pyproject.toml
.github/workflows/: python-package.yml
Website/: Website.py
Website/Logins/: Trusted-ips.json  Users.json
Website/static/js/: discord.js
Website/static/styles/: Stylesheet.css
Website/templates/: Discord.html  Home.html  Lights.html  Login.html  Page_Not_Found.html
src/sk_6812_rgbw_laggrif/: Colors.py  GUI.py  StopThread.py  Strandtest.py
