[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sk_6812_rgbw_laggrif"
version = "0.0.1"
authors = [
  { name="Laggrif", email="ugo.novello@gmail.com" },
]
description = "Allows to control sk_6812 rgbw led strips with raspberry pi"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Laggrif/SK_6812_RGBW"
"Bug Tracker" = "https://github.com/Laggrif/SK_6812_RGBW/issues"